--- a/styles.css/school.css
+++ b/styles.css/school.css
@@ -84,6 +84,7 @@ border-radius: 12px;
 color: white;
 font-weight: 600;
 background-color: black;
+
 }
 .kids{
     width: 468px;
@@ -96,7 +97,7 @@ main{
 }
 .story{
     /* stories */
-    background: url(assets/bg.png),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+    /* border: 4px solid blue; */
 position: absolute;
 width: 1440px;
 height: 1018.02px;
@@ -107,11 +108,14 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-gap: 80;
+/* gap: 80; */
 padding: 60px 0px 60px 0px;
+background:linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%),url(assets/bg.png);
+
 }
+
 .st{
-    border: 5px solid rebeccapurple;
+    /* border: 5px solid rebeccapurple; */
     /* Group 38 */
 position: static;
 width: 1160px;
@@ -131,7 +135,7 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-gap: 80;
+/* gap: 30; */
 padding: 60px 0px 60px 0px;
 flex: none;
 order: 0;
@@ -141,9 +145,22 @@ color:black;
 text-align: center;
 }
 
+.card-4{
+position: absolute;
+width: 601px;
+height: 622.4px;
+left: 699px;
+right: -140px;
+top: 430.5px;
+display: grid;
+grid-template-columns: repeat(2,1fr);
+margin-bottom: 0px;
+
+}
+
 
 .story-card1-container{
-border: 4px solid black;
+/* border: 4px solid black; */
 /* Article */
 position: relative;
 width: 540.27px;
@@ -188,22 +205,12 @@ letter-spacing: 0%;
 text-align: left;
 margin-left: 30px;
 }
-.card-4{
-    /* Group 20 */
-position: absolute;
-width: 601px;
-height: 622.4px;
-left: 699px;
-right: -140px;
-top: 197.5px;
-bottom: -189.38px;
 
-}
 .story-card2-container{
-border: 4px solid tomato;
+/* border: 4px solid tomato; */
 position: relative;
-width: 290.69px;
-height: 301.61px;
+width: px;
+height: px;
 border-radius: 16px;
 background: rgb(255, 255, 255);
 }
@@ -262,4 +269,64 @@ width: 174.51px;
 height: 38.35px;
 left: 38.35px;
 top: 157.81px; 
+}
+@media  screen and (max-width: 576px){
+    .header{
+        width: 390px;
+        height: ;
+    }
+.navbar{
+    /* margin-left:0px ; */
+    width: 100%;
+}
+    .nav-link, .btn-primary,.brand{
+        display: none;
+    }
+    .group{
+        position: absolute;
+        width: 46px;
+        height: 46px;
+        left:16px;
+        right: 296px;
+        top: 12px;
+        bottom: -12px;
+    }
+    .banner-container{
+        /* Banner */
+position: absolute;
+width: 357px;
+height: 725px;
+left: 10px;
+top: 220px;
+/* Auto layout */
+display: flex;
+flex-direction: column-reverse;
+justify-content: flex-start;
+align-items: center;
+gap: 20;
+padding: 20px 0px 20px 0px;
+    }
+    .banner-content{
+        width: 100%;
+/* height: 575px; */
+        margin-right:0px ;
+        margin-left: 0px;
+    }
+    .header, .btn-secondary {
+        justify-content: center;
+        
+    }
+    .para{
+        width:100% ;
+        height: px;
+        justify-content: center;
+        align-items: center;
+    }
+    .card-4{
+        background:linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 50%);
+       /* margin-left: 1px; */
+    }
+    .story-card1-container{
+        display: none;
+    }
 }
